# docling_parse

./: .cursorignore  .cursorrules  .env.example  .gitignore  .gitmodules  OutputFormatter.py  README.md  breadcrumb_chunker.py  custom_chunker.py  debug_breadcrumb.py  docling_config.yaml  docling_fix.py  docling_import_fix.py  fix_all_experimental.py  format_standardized_output.py  parse_main.py  pyproject.toml  requirements.txt  run_parser.py  run_tests.py  test_all_docling_imports.py  test_config.py  test_docling_import.py  test_docling_import_fixed.py  test_format_output.py  test_standalone_output.py
docs/: image_extraction.md
final_approach/: README.md  breadcrumb_chunker.py  chunk_mapper.py  externally_ref_images.py
scripts/: docling_json_structure.md  prd.txt
src/: __init__.py  breadcrumb_generator.py  chunk_mapper.py  cli.py  content_extractor.py  docling_fix.py  docling_integration.py  element_map_builder.py  externally_ref_images.py  format_standardized_output.py  fusa_parser.py  image_extraction_module.py  json_metadata_fixer.py  logger_config.py  metadata_extractor.py  output_formatter.py  parse_helper.py  parse_main.py  pdf_image_extractor.py  pdf_image_pipeline.py  sequence_flattener.py  sql_formatter.py  sql_insert_generator.py  streamlined_processor.py  test_element_map_builder.py  test_metadata_extractor.py  test_parse_main.py  utils.py
src_backup/: parse_helper.py  parse_main.py
tests/: README.md  __init__.py  create_test_pdf.py  integration_test_parse_main.py  mock_docling.py  run_integration_test.py  run_parse_test.py  test_base64_removal.py  (+66 more)
(+8 files in other folders)
